--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,4 @@
--e git+https://github.com/Kartoza/geonode-mapstore-client.git@4.0.x-delft#egg=django_geonode_mapstore_client
+-e git+https://github.com/GeoNode/geonode-mapstore-client.git@4.0.x#egg=django_geonode_mapstore_client
 -e git+https://github.com/GeoNode/geonode.git@4.0.x#egg=GeoNode
+django-countries
 # GeoNode==4.0.3
