--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,2 @@
--e git+https://github.com/GeoNode/geonode-mapstore-client.git@4.0.x#egg=django_geonode_mapstore_client
--e git+https://github.com/GeoNode/geonode.git@4.0.x#egg=GeoNode
+git+https://github.com/GeoNode/geonode.git@4.1.x#egg=GeoNode
 django-countries
-# GeoNode==4.0.3
