--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -54,9 +54,9 @@ services:
 
   # Nginx is serving django static and media files and proxies to django and geonode
   geonode:
-    image: ${COMPOSE_PROJECT_NAME}/nginx:4.0.x
-    build: ../deployment/nginx/
-    container_name: ${COMPOSE_PROJECT_NAME}_nginx
+    image: geonode/nginx:1.23.3
+    build: ./docker/nginx/
+    container_name: nginx4${COMPOSE_PROJECT_NAME}
     environment:
       - HTTPS_HOST=${HTTPS_HOST}
       - HTTP_HOST=${HTTP_HOST}
@@ -75,9 +75,9 @@ services:
 
   # Gets and installs letsencrypt certificates
   letsencrypt:
-    image: ${COMPOSE_PROJECT_NAME}/letsencrypt:4.0.x
-    build: ../deployment/letsencrypt
-    container_name: ${COMPOSE_PROJECT_NAME}_letsencrypt
+    image: geonode/letsencrypt:4.master
+    build: ./docker/letsencrypt/
+    container_name: letsencrypt4${COMPOSE_PROJECT_NAME}
     environment:
       - HTTPS_HOST=${HTTPS_HOST}
       - HTTP_HOST=${HTTP_HOST}
@@ -124,7 +124,6 @@ services:
 
   # PostGIS database.
   db:
-    # use geonode official postgis 13 image
     image: kartoza/postgis:15-3.3
     container_name: db4${COMPOSE_PROJECT_NAME}
     environment:
@@ -181,7 +180,7 @@ services:
     entrypoint: [ ]
     build:
       context: ../
-      dockerfile: deployment/docker/Dockerfile
+      dockerfile: deployment/docker/Dockerfile.dev
       target: dev
     depends_on:
       - geoserver
@@ -189,7 +188,7 @@ services:
       - celery
     ports:
       # for django test server
-      - "4002:8080"
+      - "4002:8090"
       # for ssh
       - "4003:22"
 
