--- a/deployment/docker/Dockerfile.dev
+++ b/deployment/docker/Dockerfile.dev
@@ -1,5 +1,4 @@
-FROM python:3.10.2-buster AS prod
-LABEL GeoNode development team
+FROM python:3.10.2-buster AS dev
 
 RUN mkdir -p /usr/src/woolpert
 
@@ -64,19 +63,30 @@ RUN chmod +x /usr/bin/celery-commands
 COPY src/celery-cmd /usr/bin/celery-cmd
 RUN chmod +x /usr/bin/celery-cmd
 
-RUN pip install --src /usr/src -r requirements.txt
-# RUN pip install --upgrade  -e .
-RUN python setup.py install
+RUN pip install -r requirements-dev.txt
+RUN pip install --upgrade  -e .
 
-# Cleanup apt update lists
-RUN rm -rf /var/lib/apt/lists/*
+# This section taken on 2 July 2015 from
+# https://docs.docker.com/examples/running_ssh_service/
+# Sudo is needed by pycharm when it tries to pip install packages
+RUN apt-get update && apt-get install -y openssh-server sudo
+RUN mkdir -p /var/run/sshd
+RUN echo 'root:docker' | chpasswd
+RUN sed -i 's/^PermitRootLogin */#PermitRootLogin /' /etc/ssh/sshd_config
+RUN echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
 
-# Export ports
-EXPOSE 8000
+# SSH login fix. Otherwise user is kicked off after login
+RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 
-# We provide no command or entrypoint as this image can be used to serve the django project or run celery tasks
-# ENTRYPOINT /usr/src/woolpert/entrypoint.sh
+ENV NOTVISIBLE "in users profile"
+RUN echo "export VISIBLE=now" >> /etc/profile
 
+# --------------------------------------------------------
+# Open ports as needed
+# --------------------------------------------------------
+
+# Open port 8080 as we will be running our django dev server on
+EXPOSE 8090
 # Open port 22 as we will be using a remote interpreter from pycharm
 EXPOSE 22
 
