--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -62,8 +62,7 @@ services:
       - HTTP_HOST=${HTTP_HOST}
       - HTTPS_PORT=${HTTPS_PORT}
       - HTTP_PORT=${HTTP_PORT}
-      - LETSENCRYPT_MODE=${LETSENCRYPT_MODE}
-      - RESOLVER=127.0.0.11
+      - RESOLVER=127.0.0.1
     ports:
       - "${HTTP_PORT}:80"
       - "${HTTPS_PORT}:443"
@@ -73,23 +72,9 @@ services:
       - statics:/mnt/volumes/statics
     restart: on-failure
 
-  # Gets and installs letsencrypt certificates
-  letsencrypt:
-    image: geonode/letsencrypt:4.master
-    build: ./docker/letsencrypt/
-    container_name: letsencrypt4${COMPOSE_PROJECT_NAME}
-    environment:
-      - HTTPS_HOST=${HTTPS_HOST}
-      - HTTP_HOST=${HTTP_HOST}
-      - ADMIN_EMAIL=${ADMIN_EMAIL}
-      - LETSENCRYPT_MODE=${LETSENCRYPT_MODE}
-    volumes:
-      - nginx-certificates:/geonode-certificates
-    restart: on-failure
-
   # Geoserver backend
   geoserver:
-    image: kartoza/geoserver:geonode-2.23.0.x
+    image: geonode/geoserver:2.23.0
     container_name: ${COMPOSE_PROJECT_NAME}_geoserver
     healthcheck:
       test: "curl --fail --silent --write-out 'HTTP CODE : %{http_code}\n' --output /dev/null http://127.0.0.1:8080/geoserver/ows"
