--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/GeoNode/geonode-mapstore-client.git@master#egg=django_geonode_mapstore_client
-git+https://github.com/GeoNode/geonode.git@master#egg=GeoNode
+-e git+https://github.com/GeoNode/geonode-mapstore-client.git@4.1.x#egg=django_geonode_mapstore_client
+-e git+https://github.com/GeoNode/geonode.git@4.1.x#egg=GeoNode
 # GeoNode==4.0.3
 django-countries
